fix home timeline.
